Fixed z-index to increment by 1 and fixed positioning of add task pop up and ticket pop up. Created seperated css class for add task pop up to reduce dependencies and enhance maintainabilty.

--- a/styles/accountNav.css
+++ b/styles/accountNav.css
@@ -4,7 +4,7 @@
   right: 20px;
   width: 140px;
   height: 75px;
-  z-index: 60;
+  z-index: 6;
 }
 
 .account-nav {
