--- a/styles/addTaskBoard.css
+++ b/styles/addTaskBoard.css
@@ -229,7 +229,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(128, 128, 128, 0.5);
-  z-index: 40;
+  z-index: 4;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -246,11 +246,30 @@
   transition: opacity 0.2s ease;
 }
 
+.pop-up-add-task {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  width: 75%;
+  height: 40%;
+  min-height: 600px;
+  max-width: 1200px;
+  padding: 75px;
+  padding-top: 50px;
+  border-radius: 25px;
+  z-index: 50;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.2s ease;
+  scrollbar-width: none;
+}
+
 .add-task-select-div {
   max-height: 100%;
 }
 
-/* Animationen */
 @keyframes slideInFromLeft {
   from {
     transform: translate(-50%, -50%) translateX(100%);
@@ -273,14 +292,73 @@
   }
 }
 
-.pop-up.slide-in {
+.pop-up-add-task.slide-in {
   animation: slideInFromLeft 0.2s forwards;
   pointer-events: auto;
 }
 
-.pop-up.slide-out {
+.pop-up-add-task.slide-out {
   animation: slideOutToRight 0.2s forwards;
   pointer-events: none;
+}
+
+@media (min-width: 2550px) {
+  .pop-up-add-task {
+    left: 30%;
+    top: 40%;
+    transform: translate(-30%, -50%);
+  }
+
+  @keyframes slideInFromLeft {
+    from {
+      transform: translate(-30%, -50%) translateX(100%);
+      opacity: 0;
+    }
+    to {
+      transform: translate(-30%, -50%) translateX(0);
+      opacity: 1;
+    }
+  }
+
+  @keyframes slideOutToRight {
+    from {
+      transform: translate(-30%, -50%) translateX(0);
+      opacity: 1;
+    }
+    to {
+      transform: translate(-30%, -50%) translateX(100%);
+      opacity: 0;
+    }
+  }
+}
+
+@media (min-width: 3500px) {
+  .pop-up-add-task {
+    left: 23%;
+    transform: translate(-30%, -50%);
+  }
+
+  @keyframes slideInFromLeft {
+    from {
+      transform: translate(-30%, -50%) translateX(100%);
+      opacity: 0;
+    }
+    to {
+      transform: translate(-30%, -50%) translateX(0);
+      opacity: 1;
+    }
+  }
+
+  @keyframes slideOutToRight {
+    from {
+      transform: translate(-30%, -50%) translateX(0);
+      opacity: 1;
+    }
+    to {
+      transform: translate(-30%, -50%) translateX(100%);
+      opacity: 0;
+    }
+  }
 }
 
 @media (max-width: 840px) {
@@ -342,14 +420,5 @@
   .add-task-form {
     height: 50vh;
     margin-bottom: 24px;
-  }
-}
-
-@media (min-width: 2560px) {
-  #add-task-pop-up {
-    margin-left: 0;
-    position: relative;
-    left: calc((100% - 1920px) / 2);
-    bottom: calc((100% - 600px) / 2);
   }
 }
