--- a/styles/boardTaskPopUp.css
+++ b/styles/boardTaskPopUp.css
@@ -12,7 +12,7 @@
   transform: translate(-50%, -50%);
   scrollbar-width: none;
   -ms-overflow-style: none;
-  z-index: 1000;
+  z-index: 13;
 }
 
 #board-task-pop-up::-webkit-scrollbar {
@@ -152,19 +152,17 @@
 }
 
 .center-container {
-  position: fixed; /* bleibt über allem */
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center; /* horizontal */
+  justify-content: center;
   align-items: center;
   background: rgba(0, 0, 0, 0.5);
-  z-index: 999;
+  z-index: 12;
 }
-
-/* Edit popup Menu */
 
 #board-task-edit,
 #edit-add-task-text-div {
